--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,6 +4,8 @@ body {
     background-color:#111;
     color:white;
     font-family:Arial, Helvetica, sans-serif;
+    font-size:10pt;
+    paddin: 0px 5px;
 }
 
 #wrapper {
@@ -106,13 +108,46 @@ a:hover {
     margin:0px;
     padding:0px;
     border:0px;
-    background-color:white;
+    %background-color:white;
 }
 
 .thread {
 
 }
 
-.postMessage {
+.postInfo {
+    display:block;
+}
+
+.subject {
+    font-weight:700;
+    color:#e60073;
+}
+
+.name {
+    font-weight:700;
+}
+
+.comment {
     margin: 1em 40px;
+}
+
+.file {
+
+}
+
+.postWrapper {
+    display:flex;
+    flex-flow:row;
+}
+
+.post {
+    background-color:#333;
+    padding: 2px;
+    margin: 2px 0px;
+    overflow:hidden;
+}
+
+.sideArrows {
+    margin:0px 2px;
 }
