--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,9 +1,11 @@
 /* This file is for your main application css. */
 
+$font-stack:'terminus','inconsolata',monospace;
+
 body {
-    background-color:#111;
+    background-color:black;
     color:white;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:$font-stack;
     font-size:10pt;
     paddin: 0px 5px;
 }
@@ -17,7 +19,7 @@ body {
 h1 {
     color:white;
     text-align:center;
-    font-family:Tahoma, sans-serif;
+    font-family:$font-stack;
     font-size:28px;
     font-weight:700;
     margin:0px;
@@ -108,7 +110,7 @@ a:hover {
     margin:0px;
     padding:0px;
     border:0px;
-    %background-color:white;
+    background-color:white;
 }
 
 .thread {
