--- a/lib/chan_web/templates/layout/app.html.eex
+++ b/lib/chan_web/templates/layout/app.html.eex
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
-    <div id="elm-main"></div>
-    <script type="text/javascript" src="<%= Routes.static_url(@conn, "/js/app.js") %>"></script>
+    <%= @inner_content %>
   </body>
 </html>
