added error messages for invalid posts, refactored a little bit

--- a/lib/chan_web/templates/board/show.html.eex
+++ b/lib/chan_web/templates/board/show.html.eex
@@ -1,10 +1,4 @@
 <% catalog_link = ChanWeb.Router.Helpers.board_thread_path(@conn, :index, @board.abb)%>
-<div id = "navbar">
-  <span class = "navbar"><% [head | tail] = @boards %><a href="/<%= head.abb %>/"><%= head.abb %></a>
-    <%= for b <- tail do %>
-	 / <a href="/<%= b.abb %>/"><%= b.abb %></a><% end %></span>
-	</div>
-<hr>
 <div class = "banner">
   
   <h1>/<%= @board.abb %>/ - <%= @board.name %></h1>
@@ -17,7 +11,8 @@
 	<th>Name</th>
 	<td>
 	  <%= inputs_for f, :posts, fn i -> %>
-	  <%= text_input i, :name , value: "Anonymous"%>
+	  <%= text_input i, :name %><br>
+	  <%= error_tag i, :name %>
 	  <% end %>
 	</td>
       </tr>
@@ -30,7 +25,7 @@
       <tr>
 	<th>Subject</th>
 	<td>
-	  <%= text_input f, :subject %><%= submit "Post" %>
+	  <%= text_input f, :subject %><%= submit "Post" %><br><%= error_tag f, :subject%>
 	</td>
       </tr>
       <tr>
