--- a/lib/chan_web/templates/board/show.html.eex
+++ b/lib/chan_web/templates/board/show.html.eex
@@ -46,7 +46,7 @@
   </table>
   <% end %>
   <hr>
-  <a class = "button" href = "<%= catalog_link%>">Catalog</a><a class = "button" href = "#">Update</a><a class = "button" href = "#bottom">Bottom</a>
+  <a class = "button" href = "<%= catalog_link%>">Catalog</a><a class = "button" onclick = "location.reload()">Update</a><a class = "button" href = "#bottom">Bottom</a>
   <hr>
 <%= for thread <- @threads do %>
     <%= render(ChanWeb.ThreadView, "short.html", thread: thread, board_id: @board.abb, conn: @conn) %>
