--- a/lib/chan_web/templates/board/footer.html.eex
+++ b/lib/chan_web/templates/board/footer.html.eex
@@ -3,5 +3,9 @@
   <%= if @page > 1 do %>
   <a href = <%= ChanWeb.Router.Helpers.board_board_path(@conn, :show, @board_id, @page-1)%> class = "button">Previous</a><% else %><span class = "disabled">Previous</span><% end %><span class = "navbar"><%= if @page == head do %><b><%= head%></b><% else %><a href = <%= ChanWeb.Router.Helpers.board_board_path(@conn, :show, @board_id, head)%>>1</a><% end %><%= for p <- tail do %>/<%= if @page == p do %><b><%= p%></b><% else %><a href = <%= ChanWeb.Router.Helpers.board_board_path(@conn, :show, @board_id, p)%>><%= p%></a><% end %><% end %></span><%= if @page < @pages do %><a href = <%= ChanWeb.Router.Helpers.board_board_path(@conn, :show, @board_id, @page+1)%> class = "button">Next</a><% else %><span class = "disabled">Next</span><% end %>
 <a href="/" class = "button">Home</a>
+<div class = "deleteForm">
+  <%= password_input :delete, :password, [placeholder: "Password"] %>
+  <%= submit "Delete" %>
+</div>
 </div>
 <hr>
