image uploads work! (on replies, have yet to implement them on OP)

--- a/lib/chan_web/templates/thread/reply.html.eex
+++ b/lib/chan_web/templates/thread/reply.html.eex
@@ -11,6 +11,9 @@
 	<%= @post.inserted_at%> <a href="#<%= @post.id%>">No.<%= @post.id%></a>
       </span>
     </p>
+    <%= if @post.upload != nil do %>
+    <img src=<%=ChanWeb.Router.Helpers.board_upload_path(@conn, :show, @board_id, @post.upload.id)%> class = "imageThumb">
+    <% end %>
     <p class = "replyText"><%= ChanWeb.Formatting.as_html @post.comment %></p>
   </div>
 </div>
