image uploads really work now! as does deletion! last change to make is to somehow make images required for the OP.

--- a/lib/chan_web/templates/board/show.html.eex
+++ b/lib/chan_web/templates/board/show.html.eex
@@ -39,7 +39,7 @@
       <tr>
 	<th>File</th>
 	<td>
-	  <input type = "file" name = "thread[file]" accept = ".pdf,image/*">
+	  <input type = "file" name = "file" accept = "image/*">
 	</td>
       </tr>
       <tr>
